@@ -1,6 +1,12 @@
 2013-05-14  Vanessa Gil <vanessa.gil@artica.es>
 
 	* include/functions_inventories.php
+	  operation/inventories/inventory_search.php: Added second level
+	parent.
+
+2013-05-14  Vanessa Gil <vanessa.gil@artica.es>
+
+	* include/functions_inventories.php
 	  operation/inventories/inventory_search.php: Fixed tree view
 	and added a new level with parent.
 
